--- a/Fiorello/Views/Home/Index.cshtml
+++ b/Fiorello/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@using Fiorello.Models
+@model List<Slide>
 @{
     ViewData["Title"] = "Index";
 }
@@ -12,9 +14,11 @@
 
     <section id="slider">
         <div class="owl-carousel slider">
-            <div> <img src="~/img/h3-slider-background.jpg" alt=""> </div>
-            <div> <img src="~/img/h3-slider-background-2.jpg" alt=""> </div>
-            <div> <img src="~/img/h3-slider-background-3.jpg" alt=""> </div>
+            @foreach (var slide in Model)
+            {
+                <div> <img src="~/img/@slide.Url" alt=""> </div>
+            }
+
         </div>
         <div class="container context pl-lg-5 ml-lg-3">
             <div class="row">
