--- a/Fiorello/Views/Home/Index.cshtml
+++ b/Fiorello/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @using Fiorello.Models
-@model List<Slide>
+@using Fiorello.ViewModels
+@model HomeViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -14,7 +15,7 @@
 
     <section id="slider">
         <div class="owl-carousel slider">
-            @foreach (var slide in Model)
+            @foreach (var slide in Model.Slides)
             {
                 <div> <img src="~/img/@slide.Url" alt=""> </div>
             }
@@ -24,15 +25,12 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text">
-                        <h1>Send <span>flowers</span> like</h1>
-                        <h1>you mean it</h1>
-                        <p class="text-black-50 d-none d-sm-block">
-                            Where flowers are our inspiration to create lasting memories. Whatever the occasion, our flowers will
-                            make it special cursus a sit amet mauris.
+                        @Html.Raw(Model.Summary.Title)
+                        <p class="text-black-50 d-none d-sm-block">@Model.Summary.Description
                         </p>
                     </div>
                     <div class="img">
-                        <img src="~/img/h2-sign-img.png" alt="">
+                        <img src="~/img/@Model.Summary.Image" alt="">
                     </div>
                 </div>
             </div>
