--- a/Fiorello/Areas/AdminPanel/Views/Category/Index.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@model IEnumerable<Category>
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,6 +10,9 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Caregories</h4>
+                <div class="col-lg-12">
+                    <a class="btn btn-success" asp-action="Create">Create Category</a>
+                </div>
                 <div class="table-responsive pt-3">
                     <table class="table table-dark">
                         <thead>
@@ -17,115 +21,33 @@
                                     #
                                 </th>
                                 <th>
-                                    First name
+                                    Category Name
                                 </th>
                                 <th>
-                                    Amount
-                                </th>
-                                <th>
-                                    Deadline
+                                    Settings
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>
-                                    1
-                                </td>
-                                <td>
-                                    Herman Beck
-                                </td>
-                                <td>
-                                    $ 77.99
-                                </td>
-                                <td>
-                                    May 15, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    2
-                                </td>
-                                <td>
-                                    Messsy Adam
-                                </td>
-                                <td>
-                                    $245.30
-                                </td>
-                                <td>
-                                    July 1, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    3
-                                </td>
-                                <td>
-                                    John Richards
-                                </td>
-                                <td>
-                                    $138.00
-                                </td>
-                                <td>
-                                    Apr 12, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    4
-                                </td>
-                                <td>
-                                    Peter Meggik
-                                </td>
-                                <td>
-                                    $ 77.99
-                                </td>
-                                <td>
-                                    May 15, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    5
-                                </td>
-                                <td>
-                                    Edward
-                                </td>
-                                <td>
-                                    $ 160.25
-                                </td>
-                                <td>
-                                    May 03, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    6
-                                </td>
-                                <td>
-                                    John Doe
-                                </td>
-                                <td>
-                                    $ 123.21
-                                </td>
-                                <td>
-                                    April 05, 2015
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    7
-                                </td>
-                                <td>
-                                    Henry Tom
-                                </td>
-                                <td>
-                                    $ 150.00
-                                </td>
-                                <td>
-                                    June 16, 2015
-                                </td>
-                            </tr>
+                            @foreach (var ct in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        1
+                                    </td>
+                                    <td>
+                                        @ct.Name
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@ct.Id">
+                                            <i class="mdi mdi-delete"></i>
+                                        </a>
+                                        <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@ct.Id">
+                                            <i class="mdi mdi-pencil"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
