--- a/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Fiorello.ViewModels.VMCategory
+@model CategoryCreateVM
 @{
     ViewData["Title"] = "Create";
 }
@@ -10,8 +11,8 @@
                 <h4 class="card-title">Create New Category</h4>
                 <form class="forms-sample" method="post">
                     <div class="form-group">
-                        <label for="Name">Category</label>
-                        <input type="text" class="form-control" name="Name" id="Name" placeholder="Category Name">
+                        <label asp-for="Name">Category</label>
+                        <input asp-for="Name" class="form-control"  placeholder="Category Name">
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Create</button>
                     <a class="btn btn-light" asp-action="Index">Cancel</a>
