--- a/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
@@ -13,6 +13,7 @@
                     <div class="form-group">
                         <label asp-for="Name">Category</label>
                         <input asp-for="Name" class="form-control"  placeholder="Category Name">
+                        <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Create</button>
                     <a class="btn btn-light" asp-action="Index">Cancel</a>
