--- a/Fiorello/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -167,7 +167,7 @@
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="AdminPanel" asp-controller="Dashboard" asp-action="Index" >
+                        <a class="nav-link" asp-area="AdminPanel" asp-controller="Dashboard" asp-action="Index">
                             <i class="mdi mdi-home menu-icon"></i>
                             <span class="menu-title">Dashboard</span>
                         </a>
@@ -186,7 +186,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="AdminPanel" asp-controller="Category" asp-action="Index" >
+                        <a class="nav-link" asp-area="AdminPanel" asp-controller="Category" asp-action="Index">
                             <i class="mdi mdi-view-headline menu-icon"></i>
                             <span class="menu-title">Categories</span>
                         </a>
@@ -266,6 +266,8 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="~/admin/js/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" integrity="sha512-FOhq9HThdn7ltbK8abmGn60A/EMtEzIzv1rvuh+DqzJtSGq8BRdEN0U+j0iKEIffiw/yEtVuladk6rsG4X6Uqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js" integrity="sha512-o6XqxgrUsKmchwy9G5VRNWSSxTS4Urr4loO6/0hYdpWmFUfHqGzawGxeQGMDqYzxjY9sbktPbNlkIQJWagVZQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- End custom js for this page-->
 </body>
 
