--- a/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Category/Create.cshtml
@@ -12,7 +12,7 @@
                 <form class="forms-sample" method="post">
                     <div class="form-group">
                         <label asp-for="Name">Category</label>
-                        <input asp-for="Name" class="form-control"  placeholder="Category Name">
+                        <input asp-for="Name" class="form-control" placeholder="Category Name">
                         <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Create</button>
@@ -22,4 +22,7 @@
         </div>
     </div>
 </div>
-
+@section Script{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" integrity="sha512-FOhq9HThdn7ltbK8abmGn60A/EMtEzIzv1rvuh+DqzJtSGq8BRdEN0U+j0iKEIffiw/yEtVuladk6rsG4X6Uqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js" integrity="sha512-o6XqxgrUsKmchwy9G5VRNWSSxTS4Urr4loO6/0hYdpWmFUfHqGzawGxeQGMDqYzxjY9sbktPbNlkIQJWagVZQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+}
