--- a/Fiorello/Areas/AdminPanel/Views/Category/Update.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Category/Update.cshtml
@@ -15,7 +15,7 @@
                         <input asp-for="Name" class="form-control" placeholder="Category Name">
                         <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
-                    <button type="submit" class="btn btn-primary me-2">Create</button>
+                    <button type="submit" class="btn btn-warning me-2">Edit</button>
                     <a class="btn btn-light" asp-action="Index">Cancel</a>
                 </form>
             </div>
