--- a/Fiorello/Areas/AdminPanel/Views/Slider/Index.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Slider/Index.cshtml
@@ -22,7 +22,6 @@
                                     #
                                 </th>
                                 <th>
-                                    slider
                                     Image
                                 </th>
                                 <th>
@@ -44,7 +43,7 @@
                                         <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@slider.Id">
                                             <i class="mdi mdi-delete"></i>
                                         </a>
-                                        <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@slider.Id">
+                                        <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@sliderslider.Id">
                                             <i class="mdi mdi-pencil"></i>
                                         </a>
                                     </td>
