--- a/Fiorello/Areas/AdminPanel/Views/Slider/Index.cshtml
+++ b/Fiorello/Areas/AdminPanel/Views/Slider/Index.cshtml
@@ -43,7 +43,7 @@
                                         <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@slider.Id">
                                             <i class="mdi mdi-delete"></i>
                                         </a>
-                                        <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@sliderslider.Id">
+                                        <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@slider.Id">
                                             <i class="mdi mdi-pencil"></i>
                                         </a>
                                     </td>
