--- a/Fiorello/Views/Home/Index.cshtml
+++ b/Fiorello/Views/Home/Index.cshtml
@@ -3,6 +3,16 @@
 @model HomeViewModel
 @{
     ViewData["Title"] = "Index";
+
+    Pager pager = new Pager();
+
+    int pageNo = 0;
+
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
 }
 
 
@@ -95,6 +105,20 @@
                     </div>
                 }
             </div>
+        </div>
+        <div class="container">
+            @if (pager.TotalPages > 0)
+            {
+                <ul class="pagination justify-content-end">
+                    @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
+                    {
+                        <li class="page-item @(pge==pager.CurrentPage?"active":"")">
+                            <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-pg="@pge">@pge</a>
+                        </li>
+                    }
+
+                </ul>
+            }
         </div>
     </section>
 
